pymvpa2 (2.3.1-1) unstable; urgency=medium

  * Fresh upstream release (should be tollerant now to scipy API change in
    1.4.0)
  * debian/watch
    - adjusted to monitor/fetch from github tags
  * debian/patches
    - all removed

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 20 May 2014 08:43:24 -0400

pymvpa2 (2.3.0-3) unstable; urgency=low

  * debian/control
    - man2html to build-depends
  * debian/patches
    - 2.3.0-37-g269c43c.diff to resolve FTBFS on trusty

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 01 May 2014 14:23:56 -0400

pymvpa2 (2.3.0-1) unstable; urgency=low

  * Perspective fresh upstream release
    - contains all patches from under debian/patches/ so those are dropped
  * debian/control
    - recommend python-nipy
  * debian/rules
    - do not compress .sh scripts (cmdline examples)

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 05 Mar 2014 23:00:31 +0100

pymvpa2 (2.2.0-4) unstable; urgency=low

  * debian/control:
    - specify git branch for debian packaging of pymvpa2. Thanks Julien
      Cristau for the report
    - build-depends on python-numpydoc
    - recommend python-pprocess (removed from the Debian archive since we
      missed a dependency on it and otherwise was unused, but is present
      from NeuroDebian )
    - policy boosted to 3.9.5 (no changes)
  * debian/rules:
    - mkdir target -lib directories before moving .so files.  It should resolve
      FTBFS with debhelper 9.20130507 and robustify build
    - quote paths with globs to avoid their expansion in find command.
      Thanks Julien Cristau for the hint

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 12 Dec 2013 08:55:02 -0500

pymvpa2 (2.2.0-3) unstable; urgency=low

  * debian/patches
    - changeset_bab55a4a390c9c4b337ead5877868f7f7debc208.diff
      Tollerate "Probabalistic" (mention the typo) and "fixed"
      FSL atlases

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 06 May 2013 15:02:58 -0400
